css for big screen added

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <h5>buttermilk pancakes</h5>
             <span class="price">$15</span>
           </header>
-          <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius eos molestiae architecto
-            ex, ea nisi nostrum quas totam quasi provident neque commodi ut doloremque hic cupiditate suscipit
-            repellendus placeat consectetur!</p>
+          <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, sint quam. Et
+            reprehenderit fugiat nesciunt
+            inventore laboriosam excepturi! Quo, officia.</p>
         </div>
       </article>
 
@@ -53,9 +53,9 @@
             <h5>buttermilk pancakes</h5>
             <span class="price">$15</span>
           </header>
-          <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius eos molestiae architecto
-            ex, ea nisi nostrum quas totam quasi provident neque commodi ut doloremque hic cupiditate suscipit
-            repellendus placeat consectetur!</p>
+          <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, sint quam. Et
+            reprehenderit fugiat nesciunt
+            inventore laboriosam excepturi! Quo, officia.</p>
         </div>
       </article>
 
@@ -67,9 +67,9 @@
             <h5>buttermilk pancakes</h5>
             <span class="price">$15</span>
           </header>
-          <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius eos molestiae architecto
-            ex, ea nisi nostrum quas totam quasi provident neque commodi ut doloremque hic cupiditate suscipit
-            repellendus placeat consectetur!</p>
+          <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, sint quam. Et
+            reprehenderit fugiat nesciunt
+            inventore laboriosam excepturi! Quo, officia.</p>
         </div>
       </article>
     </div>
