--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
     <!-- filter buttons -->
     <div class="btn-container">
-      <button type="button" class="btn filter-btn" data-id="all">all</button>
+      <!-- <button type="button" class="btn filter-btn" data-id="all">all</button>
       <button type="button" class="btn filter-btn" data-id="breakfast">breakfast</button>
       <button type="button" class="btn filter-btn" data-id="lunch">lunch</button>
-      <button type="button" class="btn filter-btn" data-id="shakes">shakes</button>
+      <button type="button" class="btn filter-btn" data-id="shakes">shakes</button> -->
     </div>
 
     <div class="section-center">
       <!-- single item -->
-      <article class="menu-item">
+      <!-- <article class="menu-item">
         <img src="./menu-item.jpeg" alt="pancakes" class="img photo">
         <div class="item-info">
           <header>
@@ -43,7 +43,7 @@
             reprehenderit fugiat nesciunt
             inventore laboriosam excepturi! Quo, officia.</p>
         </div>
-      </article>
+      </article> -->
     </div>
   </section>
 
